name:              security-system
version:           0.0.0
cabal-version:     >= 1.8
build-type:        Simple

Flag dev
    Description:   Turn on development settings, like auto-reload templates.
    Default:       False

Flag library-only
    Description:   Build for use with "yesod devel"
    Default:       False

library
    hs-source-dirs: .
    exposed-modules: CardReader.CardReader
                     CardReader.Model

    other-modules:   CardReader.PersistDerived

    if flag(dev) || flag(library-only)
        cpp-options:   -DDEVELOPMENT
        ghc-options:   -Wall -fwarn-tabs -O0
    else
        ghc-options:   -Wall -fwarn-tabs -O2

    extensions: TemplateHaskell
                QuasiQuotes
                OverloadedStrings
                NoImplicitPrelude
                CPP
                MultiParamTypeClasses
                TypeFamilies
                GADTs
                GeneralizedNewtypeDeriving
                FlexibleContexts
                EmptyDataDecls
                NoMonomorphismRestriction
                DeriveDataTypeable
                ViewPatterns
                TupleSections
                RecordWildCards

    build-depends: base
                 , yesod
                 , yesod-core
                 , classy-prelude-yesod
                 , aeson
                 , yesod-websockets
                 , persistent
                 , persistent-mysql
                 , resourcet
                 , persistent-template
                 , classy-prelude
                 , conduit
                 , yesod-table
                 , esqueleto